# prospertogether-desktop

./: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-10-preview-durable-recordings-and-rebrand.md  2026-04-10-window-follow-capture.md
docs/superpowers/specs/: 2026-04-10-preview-durable-recordings-and-rebrand-design.md  2026-04-10-window-follow-capture-design.md
scripts/: download-sidecars.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture_target.rs  lib.rs  main.rs  migration.rs  state.rs
src-tauri/src/commands/: auth.rs  devices.rs  frames.rs  mod.rs  recording.rs  recordings.rs  setup.rs  transcription.rs  updater.rs  upload.rs  window_capture.rs
src/api/: client.ts  recordings.ts  submissions.ts
src/components/audio/: AudioLevelMeter.tsx
src/components/auth/: LoginPage.tsx
src/components/dashboard/: DashboardPage.tsx
src/components/layout/: AppLayout.tsx  UpdateIndicator.tsx
src/components/onboarding/: OnboardingPage.tsx
src/components/overlay/: AnnotationCanvas.tsx  BorderPage.tsx  FloatingToolbar.tsx  OverlayPage.tsx  (+2 more)
src/hooks/: useSubmitRecording.ts  useUpdateCheck.ts
src/overlay/: useBorderOverlay.ts  useDockPicker.ts  useOverlayWindow.ts  useRegionPicker.ts
src/store/: authStore.tsx  recordingStore.ts
src/styles/: global.css
src/types/: capture.ts  recording.ts
(+11 files in other folders)
